--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite: ^2.3.2
   path: any
   path_provider: ^2.1.2
+  flutter_font_icons: ^2.2.7
+  provider: any
+  shared_preferences: any
   http: any
 
 dev_dependencies:
